fixed shopping cart section mobile view (check content margin later - header spaced from the top)

--- a/main.css
+++ b/main.css
@@ -19,10 +19,15 @@ a {
     display: inline-block;
 }
 
+h2{
+    font-size: 20px;
+    font-weight:700;
+}
+
 .container {
     max-width: 1024px;
     margin: 0 auto;
-    padding: 0 27px;
+    padding: 25px 0px 0px;
 }
 
 /* -- Common Items END */
@@ -163,7 +168,6 @@ li {
 .card-section {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 50px;
 }
 
 
@@ -173,7 +177,6 @@ li {
     flex-direction: column;
     align-items: center;
     flex-basis: 260px;
-    height: 300px;
     max-height: 300px;
     padding: 0px 5px 0px 5px;
 }
@@ -225,7 +228,12 @@ li {
 
 /* -- Shopping section START */
 .shopping-section{
-    margin: 50px 0 0 0;
+}
+
+.shopping-section__title{
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
 }
 
 .shopping-section__content{
@@ -235,10 +243,7 @@ li {
 
 .shopping-section__content_image{
     display: flex;
-    align-items: center;
-    max-width: 30vh;
-    max-height: 30vh;
-    
+    justify-content: center;   
 }
 
 .shopping-section__content_image img{
@@ -349,6 +354,18 @@ li {
         overflow: hidden;
         text-overflow: ellipsis;
         padding-left: 15px;
+    }
+
+    .shopping-section__content{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .shopping-section__title {
+        justify-content: center;
+    }
+
+    .shopping-section__content_text {
+        padding: 0px 10px;
     }
 }
 
